# Nuanced_Screener

./: .gitignore  README.md  env.example  pyproject.toml
._tmp_real/: labels_subset.csv  labels_subset_raw.csv
._tmp_smoke/: labels.csv  labels_aapl_only.csv  windowed.parquet  windowed.parquet.meta.json
data/labels/: labels.parquet  labels.parquet.meta.json
data/meta/: tickers.csv  tickers.meta.json
docs/: PRETRAIN_MODEL_ROADMAP.md
scripts/: pretrain_sweep.py
src/screener_loader/: calendar_utils.py  candidates.py  cli.py  config.py  derived.py  dotenv.py  duckdb_utils.py  embeddings.py  experiment_tracking.py  http_client.py  labels.py  model_registry.py  normalization.py  paths.py  pattern_index.py  progress.py  rate_limit.py  raw_update.py  runners_stack6.py  scoring.py  screening.py  sliding_windows.py  stack6_features.py  universe.py  (+2 more)
tests/: conftest.py  test_batch_extra_meta_columns.py  test_candidates_latest_smoke.py  test_cli_candidates_latest_smoke.py  test_derived_from_date_partitions.py  test_derived_last100.py  test_experiment_tracking_smoke.py  test_extra_meta_columns.py  test_labels.py  test_load_universe_na_ticker.py  test_merge_dedupe.py  test_nasdaq_trader_parsing.py  test_polygon_date_planning.py  test_polygon_grouped_vendor.py  test_ssl_pretrain_and_finetune_smoke.py  test_stack6_features.py  test_stooq_response_validation.py  test_torch_ssl_head_student_smoke.py  test_train_cli_smoke.py  test_warm_cli_smoke.py  test_weak_cli_pseudo_smoke.py  test_weak_label_model.py  test_window_builder_masking.py  test_window_builder_sample_meta_columns.py
(+42 files in other folders)
